--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,14 @@ dependencies:
   file_picker: ^8.1.3
   flutter_colorpicker: ^1.0.3
   pdf_render: ^1.1.0
-  audioplayers: ^6.1.0
-  flutter_sound: ^9.6.0
+  flutter_sound: ^9.2.13
   image_picker: ^1.1.2
   flutter_painter: ^1.0.0
   share_plus: ^10.1.1
   flutter_pdfview: ^1.3.4
-
+  audioplayers: 5.1.0
+  dio: ^5.7.0
+  record: ^4.4.1
 
 
 dev_dependencies:
