--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,25 +32,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pdf: ^3.9.1
-  pdfx: ^2.3.0 # Updated to resolve naming conflicts between PdfDocument from multiple libraries
-  # flutter_pdfview: ^1.2.3
-  printing: ^5.6.0
-  signature: ^5.2.1
-  path_provider: ^2.0.11
-  file_picker: ^8.1.3
-  flutter_colorpicker: ^1.0.3
-  pdf_render: ^1.1.0
-  flutter_sound: ^9.2.13
-  image_picker: ^1.1.2
-  flutter_painter: ^1.0.0
-  share_plus: ^10.1.1
-  flutter_pdfview: ^1.3.4
-  audioplayers: 5.1.0
-  dio: ^5.7.0
-  record: ^4.4.1
-  syncfusion_flutter_pdf: ^27.1.57
-
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^10.2.0
+  scribble: ^0.10.0+1
 
 dev_dependencies:
   flutter_test:
